<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical">


    <include layout="@layout/view_title" />

    <RelativeLayout
        android:id="@+id/rela_up_pass"
        style="@style/rl_setting_item_style"
        android:layout_marginTop="@dimen/y20">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/up_login_pwd" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rela_up_pay"
        style="@style/rl_setting_item_style">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/up_pay_pwd" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_language"
        style="@style/rl_setting_item_style">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/language_switch" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rela_bank"
        style="@style/rl_setting_item_style"
        android:visibility="gone">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/bank_card_management" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_cache"
        style="@style/rl_setting_item_style">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/clear_cache" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rela_yinsi"
        style="@style/rl_setting_item_style">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/privacy_and_security" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rela_version"
        style="@style/rl_setting_item_style">

        <TextView
            android:id="@+id/tv_cur_version"
            style="@style/rl_inner_item_tv_style"
            android:text="@string/current_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/x50"
            android:text="@string/new_version"
            android:textColor="@color/global"
            android:textSize="@dimen/text_size_26" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_about"
        style="@style/rl_setting_item_style">

        <TextView
            style="@style/rl_inner_item_tv_style"
            android:text="@string/about_me" />

        <ImageView style="@style/base_arrow_right" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_logout"
        style="@style/base_main_btn"
        android:text="@string/login_out" />
</LinearLayout>