<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MyRecordActivity">

    <include layout="@layout/view_title" />

    <View style="@style/m_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:background="@color/white"
        android:divider="@color/divider_lines"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            style="@style/m_distribution_tv"
            android:text="@string/member" />

        <TextView
            style="@style/m_distribution_tv"
            android:text="@string/category" />

        <TextView
            style="@style/m_distribution_tv"
            android:text="@string/consumption" />

        <TextView
            style="@style/m_distribution_tv"
            android:text="@string/rebate" />
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>