<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/x20"
    android:layout_marginTop="@dimen/y2"
    android:background="@color/white"
    android:padding="@dimen/x20">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/x80"
        android:layout_height="@dimen/y80"
        android:layout_marginEnd="@dimen/x20"
        android:src="@mipmap/icon_avatar_placeholder" />

    <TextView
        android:id="@+id/tv_member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_avatar"
        android:layout_toEndOf="@id/iv_avatar"
        android:text="@string/member_name" />

    <TextView
        android:id="@+id/tv_get_rebate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_avatar"
        android:layout_toEndOf="@id/iv_avatar"
        android:text="@string/get_rebate" />

    <Button
        android:id="@+id/btn_weed_out"
        style="@style/m_small_btn"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:text="@string/weed_out" />
</RelativeLayout>